Make commit and branch figures easier to see
The outline and edge colour is now a dark grey, rather than black, so
that it can seen whether the user has chosen a light or dark theme.
Outlines and edges are now thicker, to ensure that they can be seen on
smaller screens and mobile devices.

--- a/figures/tikzfig.cls
+++ b/figures/tikzfig.cls
@@ -75,8 +75,8 @@
 \tikzstyle{commit}=[
     circle,
     minimum size = 0.75cm,
-    draw=black,
-    thick,
+    draw=normtext,
+    very thick,
     fill=lightblue,
     text=black,
     font=\bfseries
@@ -84,8 +84,8 @@
 
 \tikzstyle{link}=[
   -,
-  black,
-  thick,
+  draw=normtext,
+  ultra thick,
   rounded corners = 0.25cm
 ]
 
