--- a/figures/version-control/branch-2.tex
+++ b/figures/version-control/branch-2.tex
@@ -10,7 +10,7 @@
   \node[commit,fill=lightgreen] (D) [below right = 0.5cm and 1cm of C] {D};
   \node[commit,fill=lightgreen] (E) [right = 1cm of D] {E};
   \node[commit,fill=lightgreen] (F) [right = 1cm of E] {F};
-  \node[commit,fill=lightorange] (G) [below right = 1.5cm and 1cm of C] {E};
+  \node[commit,fill=lightorange] (G) [below right = 1.5cm and 1cm of C] {G};
   \node[commit,fill=lightorange] (H) [right = 1cm of G] {H};
 
   % Define the connections between the commits.
