Add some example reproducible research questions

--- a/src/community/meetings/2023-04-17.md
+++ b/src/community/meetings/2023-04-17.md
@@ -13,6 +13,19 @@ Outline the theme and scope for this community.
 
 This is open to all researchers who share an interest in reproducible research and/or related topics and practices; **no prior knowledge is required**.
 
+Reproducible Research is a very broad topic.
+For example, consider these questions:
+
+- Can someone else reproduce your current results?
+
+- Can someone else reproduce your current results without your help?
+
+- Can you reproduce your own results from, say, 2 years ago?
+
+- Can someone else reproduce your own results from, say, 2 years ago?
+
+- Can you fix a mistake and update your own results from, say, 2 years ago?
+
 ## Describe how these meetings will run
 
 - Aim to hold these meetings on a (roughly) monthly basis.
