Minor updates for first CoP meeting agenda

--- a/src/community/meetings/2023-04-17.md
+++ b/src/community/meetings/2023-04-17.md
@@ -3,9 +3,11 @@
 This is our initial meeting.
 The goal is to welcome people to the community and outline how we envision running these Community of Practice meetings.
 
+## Acknowledgement of Country
+
 ## Introductions
 
-Introduce each participant in turn.
+We may not have time for each participant to introduce themselves.
 
 ## Theme: Reproducible Research
 
@@ -16,6 +18,8 @@ This is open to all researchers who share an interest in reproducible research a
 Reproducible Research is a very broad topic.
 For example, consider these questions:
 
+- Can you reproduce your current results on a new computer?
+
 - Can someone else reproduce your current results?
 
 - Can someone else reproduce your current results without your help?
@@ -25,6 +29,10 @@ For example, consider these questions:
 - Can someone else reproduce your own results from, say, 2 years ago?
 
 - Can you fix a mistake and update your own results from, say, 2 years ago?
+
+```admonish tip
+The biggest challenge can often be remembering **what** you did and **how** you did it.
+```
 
 ## Describe how these meetings will run
 
