Highlight that small changes can go a long way

--- a/src/community/meetings/2023-04-17.md
+++ b/src/community/meetings/2023-04-17.md
@@ -31,6 +31,8 @@ For example, consider these questions:
 
 ```admonish tip
 The biggest challenge can often be remembering **what** you did and **how** you did it.
+
+Making **small changes** to your practices can greatly improve reproducibilty!
 ```
 
 ## Describe how these meetings will run
