Minor tidy-up of meeting notes

--- a/src/community/meetings/2023-04-17.md
+++ b/src/community/meetings/2023-04-17.md
@@ -84,11 +84,11 @@ A number of common themes emerged.
 
 A number of people mentioned now being sure how to get started, or starting with good intentions but ending up with a mess.
 
-- Dave: transitioning from principle to practice
+- Dave: how can I transition from principle to practice?
+
+- Ollie: similar to David, I often start well but end up with a mess.
 
 - Ruarai: what other have found useful and applied in this space, what options are out there?
-
-- Ollie: similar to David, start well but end up with a mess
 
 - Michael: I'm a complete novice, git command lines are a foreign language to me!
   I'm looking for tips for someone who uses code a lot, experienced at coding but much less so on version control and the use of repositories.
