--- a/src/community/meetings/2023-04-17.md
+++ b/src/community/meetings/2023-04-17.md
@@ -143,7 +143,7 @@ How can we make best use of existing tools and practices, while working with col
   RMarkdown and equivalents makes a lot of sense, but most colleagues will only look at Word documents.
   There are some workarounds, such as [pandoc](https://pandoc.org/).
 
-### Limitations of reproducibility
+### Reproducibility: best practices and limitations
 
 How far can/should we go in validating and demonstrating that our models and analyses are reproducible?
 How can we automate this?
