Link to a recent paper about peer review workflows

--- a/src/community/meetings/2023-10-18.md
+++ b/src/community/meetings/2023-10-18.md
@@ -105,6 +105,12 @@ You could also ask the reviewer to look at a specific script or code file, and a
 - Should this code be divided into smaller functions?
 - Should this code be divided into multiple files?
 
+```admonish info
+For further ideas about useful peer review activities, and how to incorporate them into your workflow, see the following paper:
+
+[Implementing code review in the scientific workflow: Insights from ecology and evolutionary biology](https://doi.org/10.1111/jeb.14230), Ivimey-Cook et al., *Journal of Evolutionary Biology* 36(10):1347–1356, 2023.
+```
+
 ## Styling and formatting
 
 We also discussed opinions about how to name functions, variables, files, etc.
