Divide into several top-level sections
The proposed orientation guide should probably be in a separate section
from the topic-specific materials we've developed so far. To that end,
I've divided the content into the following sections:

- Introduction: as per the original home page, and also containing the
  "How to contribute" and "Contributors" pages.

- Orientation: a new section for the orientation guide.

- Topical guides: the current training materials, except case studies.

- Community: the Community of Practice meetings, and the case studies,
  since they're standalone contributions from the community.

I've also enabled the "navigation.tabs" and "navigation.tabs.sticky"
features, so that these top-level sections are rendered in a menu layer
below the header (except for mobile devices).

--- a/docs/community/meetings/2024-02-19.md
+++ b/docs/community/meetings/2024-02-19.md
@@ -24,21 +24,21 @@ The first suggestion was to develop orientation materials for new students, post
 Suggested topics included:
 
 - How to set up common tools on your laptop (e.g., Python and R);
-- How to [organise your files](../../using-git/how-to-structure-a-repository.md);
+- How to [organise your files](../../guides/using-git/how-to-structure-a-repository.md);
 - How to write Markdown documents;
 - How to format and lint your code;
-- How to set up git [on your own device](../../using-git/README.md) and [using platforms such as GitHub](../../collaborating/README.md);
-- How to recover [old versions of files](../../using-git/inspecting-your-history.md);
+- How to set up git [on your own device](../../guides/using-git/README.md) and [using platforms such as GitHub](../../guides/collaborating/README.md);
+- How to recover [old versions of files](../../guides/using-git/inspecting-your-history.md);
 - How to make your code device-agnostic, so it can run on HPC platforms, virtual machines, and can easily be migrated to new devices; and
 - How to plan for reproducibility from the beginning, rather than waiting until you're preparing a publication.
 
 !!! info
 
-    Some of these topics **are already covered** in [Git is my lab book](../../README.md); see the links above.
+    Some of these topics **are already covered** in [Git is my lab book](../../guides/README.md); see the links above.
 
 There was broad interest in having a checklist, and example workflows for people to follow — particularly for projects that involve some form of code "hand over", to ensure that the recipients experience few problems in running the code themselves.
 
-We aim to address these topics in [Git is my lab book](../../README.md), with **assistance and feedback from the community**.
+We aim to address these topics in [Git is my lab book](../../guides/README.md), with **assistance and feedback from the community**.
 See the [How to contribute](../../how-to-contribute.md) page for details.
 
 ## Example projects and model templates
@@ -82,7 +82,7 @@ In brief:
 
 - But you need to run this test whenever you modify your code.
 
-[Continuous Integration (CI)](../../collaborating/continuous-integration.md) is one way to run tests automatically, whenever you push a commit to a platform such as GitHub or GitLab.
+[Continuous Integration (CI)](../../guides/collaborating/continuous-integration.md) is one way to run tests automatically, whenever you push a commit to a platform such as GitHub or GitLab.
 See the list of resources [shared in our previous meeting](2023-08-15.md#resources) for some examples of using CI.
 
 In our community we have a number of people with familiarity and expertise in testing infectious disease models and related code.
@@ -95,13 +95,13 @@ We talked about how we improve our writing skills by receiving feedback on draft
 !!! info
 
     **A goal for this year is to review each other's code!**
-    Note that we have developed [some guidelines for peer code review](../..//collaborating/peer-code-review.md).
+    Note that we have developed [some guidelines for peer code review](../../guides//collaborating/peer-code-review.md).
 
 Suggestions included:
 
 - Before submitting a paper to a journal, ask someone else to run your code.
 
-- Rob has been working on a within-host malaria model, which is written in R and uses [Continuous Integration](../../collaborating/continuous-integration.md) to generate R Markdown documents every time the code is updated.
+- Rob has been working on a within-host malaria model, which is written in R and uses [Continuous Integration](../../guides/collaborating/continuous-integration.md) to generate R Markdown documents every time the code is updated.
   He is happy to share this for code review, so that:
 
   - Everyone can see a working example of continuous integration; and
