--- a/docs/community/meetings/2023-10-18.md
+++ b/docs/community/meetings/2023-10-18.md
@@ -24,12 +24,14 @@ One interesting recommendation in this guide is:
 - If files should be run **in a particular order**, prefix each file name with a number.
   For example:
 
+      ```text
       00_download.R
       01_clean.R
       02_summarise.R
       ...
       09_plot_figures.R
       10_generate_tables.R
+      ```
 
 ## Choosing a directory structure
 
@@ -125,11 +127,11 @@ When reviewing code, these differences can be somewhat distracting.
 - There are tools to automatically format your code ("formatters") and to warn about potential issues, such as unused variables ("linters").
   Here are some commonly-used formatters and linters for different languages:
 
-  | Language | Style guide(s)                                                                                                              | Formatter                                                                | Linter                                               |
-  |----------|-----------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------|------------------------------------------------------|
-  | R        | [tidyverse](https://style.tidyverse.org/)                                                                                   | [styler](https://styler.r-lib.org/)                                      | [lintr](https://lintr.r-lib.org/)                    |
-  | Python   | [PEP 8](https://peps.python.org/pep-0008/) / [The Hitchhiker's Style Guide](https://docs.python-guide.org/writing/style/) | [black](https://black.readthedocs.io/en/stable/)                         | [ruff](https://docs.astral.sh/ruff/)                 |
-  | Julia    | [style guide](https://docs.julialang.org/en/v1/manual/style-guide/)                                                         | [JuliaFormatter.jl](https://domluna.github.io/JuliaFormatter.jl/stable/) | [Lint.jl](https://lintjl.readthedocs.org/en/stable/) |
+    | Language | Style guide(s)                                                                                                              | Formatter                                                                | Linter                                               |
+    |----------|-----------------------------------------------------------------------------------------------------------------------------|--------------------------------------------------------------------------|------------------------------------------------------|
+    | R        | [tidyverse](https://style.tidyverse.org/)                                                                                   | [styler](https://styler.r-lib.org/)                                      | [lintr](https://lintr.r-lib.org/)                    |
+    | Python   | [PEP 8](https://peps.python.org/pep-0008/) / [The Hitchhiker's Style Guide](https://docs.python-guide.org/writing/style/) | [black](https://black.readthedocs.io/en/stable/)                         | [ruff](https://docs.astral.sh/ruff/)                 |
+    | Julia    | [style guide](https://docs.julialang.org/en/v1/manual/style-guide/)                                                         | [JuliaFormatter.jl](https://domluna.github.io/JuliaFormatter.jl/stable/) | [Lint.jl](https://lintjl.readthedocs.org/en/stable/) |
 
 ## AI tools for writing and reviewing code
 
