Enforce one sentence per line
Use no-break space (U+00A0) after periods in author names and other
contexts where a period is located within a sentence and should be
followed by a space.

--- a/docs/community/meetings/2023-04-17.md
+++ b/docs/community/meetings/2023-04-17.md
@@ -33,7 +33,8 @@ For example, consider these questions:
 
 - Aim to hold these meetings on a (roughly) monthly basis.
 
-- Prior to each meeting, we will invite community members to propose a topic or discussion point to be the focus of the meeting. This may be an open question or challenge, an example of good research practices, a useful software tool, etc.
+- Prior to each meeting, we will invite community members to propose a topic or discussion point to be the focus of the meeting.
+  This may be an open question or challenge, an example of good research practices, a useful software tool, etc.
 
 - Schedule each meeting to best suit the availability of community members who are particularly interested in the chosen topic.
 
