--- a/docs/community/meetings/2024-04-11.md
+++ b/docs/community/meetings/2024-04-11.md
@@ -17,7 +17,7 @@ We are aiming to keep the orientation guide short and simple, to avoid overwhelm
 
 > James Ong: If we can agree on a structure, we can then get people to contribute to specific sections.
 
-> T.K. Le: schedule a one-hour meeting where everyone works on writing content for 30 minutes, and then reviews each others' content for 30 minutes?
+> TK Le: schedule a one-hour meeting where everyone works on writing content for 30 minutes, and then reviews each others' content for 30 minutes?
 
 ## Project organisation
 
