Grammatical corrections on the meeting notes

--- a/docs/community/meetings/2024-08-08.md
+++ b/docs/community/meetings/2024-08-08.md
@@ -15,17 +15,17 @@ Attendance: 5 in person, 2 online.
 
 !!! tip "Key message"
 
-    There was strong interest in having **opinionated recommendations** for helpful software packages and libraries, based on our own experiences.
+    There was strong interest in having **opinionated recommendations** for helpful software packages and libraries, based on their own experiences.
 
 When we start out, we typically don't know what tools are available and how to choose between them.
-So having guidance and recommendations from more experiences members of our community can be valuable.
+So having guidance and recommendations from more experienced members of our community can be valuable.
 
 This harks back to [TK's presentation](2024-05-09.md) and their reflections on [choosing the best tools](2024-05-09.md#tools-and-platforms) for a specific project or task.
 For example:
 
 !!! question
 
-    Which editor should a new student choose for their project?
+    Which editor should a new student use for their project?
 
 We **strongly recommend** choosing an editor that can automatically [format](../../guides/writing-code/format-your-code.md) and [check](../../guides/writing-code/check-your-code.md) your code.
 
@@ -48,7 +48,7 @@ For example, if you want to (a) analyse tabular data; and (b) use Python; then w
 
 !!! tip "Key message"
 
-    Virtual environments allow you to install the packages that are required for specific project, without affecting other projects.
+    Virtual environments allow you to install the packages that are required for a specific project, without affecting other projects.
 
 This is useful for a number of reasons, including:
 
