Refer to multiple CPU cores
Also restore the message about making recommendations based on *our* own
experiences.

--- a/docs/community/meetings/2024-08-08.md
+++ b/docs/community/meetings/2024-08-08.md
@@ -15,7 +15,7 @@ Attendance: 5 in person, 2 online.
 
 !!! tip "Key message"
 
-    There was strong interest in having **opinionated recommendations** for helpful software packages and libraries, based on their own experiences.
+    There was strong interest in having **opinionated recommendations** for helpful software packages and libraries, based on our own experiences.
 
 When we start out, we typically don't know what tools are available and how to choose between them.
 So having guidance and recommendations from more experienced members of our community can be valuable.
@@ -120,11 +120,11 @@ This initiated a broader discussion about improving the computational performanc
 
 Computational performance was an issue that [Nefel encountered](2024-07-11.md#computational-performance) when constructing an agent-based model of pneumococcal disease, and she found that code optimisation is a skill that takes time to learn.
 
-We discussed several ways about using multiple CPUs to make code run more quickly:
+We discussed several ways about using multiple CPU cores to make code run more quickly:
 
-- Using libraries that automatically make use of multiple CPUs, such as [future.apply](https://future.apply.futureverse.org/) for R, [concurrent.futures](https://docs.python.org/3/library/concurrent.futures.html) for Python, and the [Polars](https://pola.rs/) data-frame library.
+- Using libraries that automatically make use of multiple CPU cores, such as [future.apply](https://future.apply.futureverse.org/) for R, [concurrent.futures](https://docs.python.org/3/library/concurrent.futures.html) for Python, and the [Polars](https://pola.rs/) data-frame library.
 
-- Where we want to run large numbers of simulations, the easiest approach can often be for each simulation to only use one CPU, and to run many simulations in parallel (e.g., on virtual machines that have many CPUs).
+- Where we want to run large numbers of simulations, the easiest approach can often be for each simulation to only use one CPU core, and to run many simulations in parallel (e.g., on virtual machines that have many CPU cores).
   However, as TK pointed out, if each simulation uses a large amount of RAM, it may not be possible to run many simulations in parallel with this approach.
 
 - For larger scale problems, there are HPC platforms such as the University of Melbourne's [Spartan](https://dashboard.hpc.unimelb.edu.au/) and Monash University's [MASSIVE](https://www.massive.org.au/).
